--- a/static/style.css
+++ b/static/style.css
@@ -112,32 +112,69 @@ main .main-body5{
 }
 .wrapper {
     display: flex;
-    justify-content: center;
-    margin-top: 30px;
+    position: absolute;
+    left: 438px;
+    top: 356px;
 }
 .text {
-    width: 29ch;
-    color: white;
+    width: 28ch;
+    color: #000000;
     font-family: monospace;
-    font-size: 30px;
+    font-size: 20px;
     white-space: nowrap; /* не переносить текст на другую строку */
     overflow: hidden; /* скрываем переполнение контентом */
-    border-right: 3px solid white; /* рисуем курсор */
-    animation: cursor 0.75s step-end infinite, printed_text 5s steps(29);
+    border-right: 2px solid #000000; /* рисуем курсор */
+    animation: cursor 0.75s step-end infinite, printed_text 5s steps(28);
 }
 @keyframes cursor {
     0% {
-        border-color: white;
+        border-color: #000000;
     }
     50% {
         border-color: transparent;
     }
     100% {
-        border-color: white;
+        border-color: #000000;
     }
 }
 @keyframes printed_text {
     from {
         width: 0;
     }
+}
+main .box{
+    position: relative;
+    width: 700px;
+    height: 30px;
+    left: 430px;
+    top: 350px;
+    border: 4px solid #30B8E2;
+}
+main .search img{
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    left: 1105px;
+    top: 357px;
+}
+footer{
+    position: absolute;
+    width: 1535px;
+    height: 30px;
+    left: 0px;
+    bottom: 0px;
+    background: #D9D9D9;
+}
+footer .made-by{
+    position: absolute;
+    width: 302px;
+    height: 10px;
+    left: 31px;
+    bottom: 15px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 24px;
+    color: #000000;
 }
