--- a/static/test_style.css
+++ b/static/test_style.css
@@ -2,34 +2,19 @@
     padding: 0;
     margin: 0;
 }
-.wrapper {
-    display: flex;
-    justify-content: center;
-    margin-top: 600px;
+header{
+    position: relative;
+    width: 1600px;
+    height: 60px;
+    left: 0px;
+    top: 0px;
+    background: #D9D9D9;
 }
-.text {
-    width: 28ch;
-    color: rgb(9, 0, 0);
-    font-family: monospace;
-    font-size: 20px;
-    white-space: nowrap; /* не переносить текст на другую строку */
-    overflow: hidden; /* скрываем переполнение контентом */
-    border-right: 3px solid rgb(9, 0, 0); /* рисуем курсор */
-    animation: cursor 0.75s step-end infinite, printed_text 5s steps(28);
-}
-@keyframes cursor {
-    0% {
-        border-color: rgb(9, 0, 0);
-    }
-    50% {
-        border-color: transparent;
-    }
-    100% {
-        border-color: rgb(9, 0, 0);
-    }
-}
-@keyframes printed_text {
-    from {
-        width: 0;
-    }
+footer{
+    position: relative;
+    width: 1366px;
+    height: 60px;
+    left: 0px;
+    top: 708px;
+    background: #D9D9D9
 }
