--- a/static/resume_style.css
+++ b/static/resume_style.css
@@ -132,3 +132,230 @@ main .text_main2{
     line-height: 26px;
     color: #000000;
 }
+main .text_contact{
+    box-sizing: border-box;
+    position: absolute;
+    width: 530px;
+    height: 200px;
+    left: 120px;
+    top: 380px;
+    border: 1px solid rgba(0, 0, 0, 0.33);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+main .text_contact1{
+    position: absolute;
+    width: 408px;
+    height: 107px;
+    left: 135px;
+    top: 385px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 50px;
+    color: #000000;
+}
+main .text_contact2{
+    position: absolute;
+    width: 408px;
+    height: 107px;
+    left: 135px;
+    top: 425px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 20px;
+    line-height: 30px;
+    color: rgba(0, 0, 0, 0.7);
+}
+.custom-btn {
+    left: 135px;
+    top: 440px;
+    width: 130px;
+    height: 40px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+    7px 7px 20px 0px rgba(0,0,0,.1),
+    4px 4px 5px 0px rgba(0,0,0,.1);
+    outline: none;
+}
+.btn-1 {
+    background-color: #f0ecfc;
+    background-image: linear-gradient(315deg, #f0ecfc 0%, rgba(48, 184, 226, 1) 74%);
+    line-height: 42px;
+    padding: 0;
+    border: none;
+}
+.btn-1 span {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.btn-1:before,
+.btn-1:after {
+    position: absolute;
+    content: "";
+    right: 0;
+    bottom: 0;
+    background: rgba(48, 184, 226, 1);
+    /*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+    transition: all 0.3s ease;
+}
+.btn-1:before{
+    height: 0%;
+    width: 2px;
+}
+.btn-1:after {
+    width: 0%;
+    height: 2px;
+}
+.btn-1:hover:before {
+    height: 100%;
+}
+.btn-1:hover:after {
+    width: 100%;
+}
+.btn-1:hover{
+    background: transparent;
+}
+.btn-1 span:hover{
+    color: rgba(48, 184, 226, 1);
+}
+.btn-1 span:before,
+.btn-1 span:after {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    background: rgba(48, 184, 226, 1);
+    /*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+    transition: all 0.3s ease;
+}
+.btn-1 span:before {
+    width: 2px;
+    height: 0%;
+}
+.btn-1 span:after {
+    height: 2px;
+    width: 0%;
+}
+.btn-1 span:hover:before {
+    height: 100%;
+}
+.btn-1 span:hover:after {
+    width: 100%;
+}
+footer{
+    position: absolute;
+    width: 1535px;
+    height: 30px;
+    left: 0px;
+    bottom: 0px;
+    background: #D9D9D9;
+}
+footer .made-by{
+    position: absolute;
+    width: 302px;
+    height: 10px;
+    left: 31px;
+    bottom: 15px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 24px;
+    color: #000000;
+}
+main .main_box{
+    box-sizing: border-box;
+    position: absolute;
+    width: 500px;
+    height: 600px;
+    left: 830px;
+    top: 90px;
+    border: 1px solid #30B8E2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+main .img_main img{
+    position: absolute;
+    width: 480px;
+    height: 265px;
+    left: 840px;
+    top: 100px;
+}
+main .text_inf{
+    position: absolute;
+    width: 480px;
+    height: 360px;
+    left: 840px;
+    top: 375px;
+}
+main .text_inf1{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    color: #000000;
+}
+main .text_inf2{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: rgba(0, 0, 0, 0.6);
+}
+main .text_inf3{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 30px;
+    color: #000000;
+}
+main .line{
+    position: absolute;
+    width: 498px;
+    height: 0px;
+    left: 830px;
+    top: 435px;
+    border: 1px solid #30B8E2;
+}
+main .vk img{ 
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 850px;
+    top: 620px;
+}
+main .tg img{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 905px;
+    top: 620px;
+}
+main .git img{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 960px;
+    top: 620px;
+}
