--- a/static/test_style.css
+++ b/static/test_style.css
@@ -1,47 +1,7 @@
-* {
-    padding: 0;
-    margin: 0;
+html {
+  height: 100%;
 }
-.wrapper {
-    display: flex;
-    position: absolute;
-    left: 438px;
-    top: 356px;
-}
-.text1 {
-    width: 28ch;
-    color: #e0e71e;
-    font-family: monospace;
-    font-size: 20px;
-    white-space: nowrap; /* не переносить текст на другую строку */
-    overflow: hidden; /* скрываем переполнение контентом */
-    border-right: 2px solid #691fe1; /* рисуем курсор */
-    animation: cursor 0.75s step-end infinite, printed_text1 5s steps(28);
-    animation-direction: alternate
-}
-@keyframes cursor {
-    0% {
-        border-color: #1aec79;
-    }
-    50% {
-        border-color: transparent;
-    }
-    100% {
-        border-color: #d70e0e;
-    }
-}
-@keyframes printed_text1 {
-    from {
-        width: 0;
-    }
-}
-.text2 {
-  width: 28ch;
-  color: #0a0a0a;
-  font-family: monospace;
-  font-size: 20px;
-  white-space: nowrap; /* не переносить текст на другую строку */
-  overflow: hidden; /* скрываем переполнение контентом */
-  border-right: 2px solid #080808; /* рисуем курсор */
-  animation: cursor 0.75s step-end infinite, printed_text2 5s steps(5);
+body {
+  display: flex;
+  height: 100%;
 }
