--- a/static/resume_style.css
+++ b/static/resume_style.css
@@ -158,7 +158,7 @@ main .text_contact1{
 main .text_contact2{
     position: absolute;
     width: 408px;
-    height: 107px;
+    height: 100px;
     left: 135px;
     top: 425px;
     font-family: 'Inter';
@@ -302,7 +302,7 @@ main .img_main img{
 main .text_inf{
     position: absolute;
     width: 480px;
-    height: 360px;
+    height: auto;
     left: 840px;
     top: 375px;
 }
