--- a/static/resume_style.css
+++ b/static/resume_style.css
@@ -4,7 +4,7 @@
 }
 header{
     position: relative;
-    width: 1535px;
+    width: 100%;
     height: 60px;
     left: 0px;
     top: 0px;
@@ -14,7 +14,7 @@ header .contact img{
     position: absolute;
     width: 50px;
     height: 50px;
-    left: 1445px;
+    right: 3%;
     top: 5px;
 }
 header .search-box{
@@ -285,26 +285,26 @@ footer .made-by{
 main .main_box{
     box-sizing: border-box;
     position: absolute;
-    width: 500px;
-    height: 580px;
-    left: 830px;
-    top: 90px;
+    width: 32%;
+    height: 78%;
+    right: 14%;
+    top: 12%;
     border: 1px solid #30B8E2;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 main .img_main img{
     position: absolute;
-    width: 480px;
-    height: 265px;
-    left: 840px;
-    top: 100px;
+    width: 31%;
+    height: 35%;
+    right: 14.5%;
+    top: 13%;
 }
 main .text_inf{
     position: absolute;
-    width: 480px;
+    width: 31%;
     height: auto;
-    left: 840px;
-    top: 375px;
+    right: 14.5%;
+    top: 49%;
 }
 main .text_inf1{
     font-family: 'Inter';
@@ -332,30 +332,30 @@ main .text_inf3{
 }
 main .line{
     position: absolute;
-    width: 498px;
+    width: 31.8%;
     height: 0px;
-    left: 830px;
-    top: 435px;
+    right: 14%;
+    top: 56.8%;
     border: 1px solid #30B8E2;
 }
 main .vk img{ 
     position: absolute;
     width: 40px;
     height: 40px;
-    left: 850px;
-    top: 620px;
+    right: 42%;
+    top: 82.5%;
 }
 main .tg img{
     position: absolute;
     width: 40px;
     height: 40px;
-    left: 905px;
-    top: 620px;
+    right: 38.5%;
+    top: 82.5%;
 }
 main .git img{
     position: absolute;
     width: 40px;
     height: 40px;
-    left: 960px;
-    top: 620px;
+    right: 35%;
+    top: 82.5%;
 }
