--- a/static/works_style.css
+++ b/static/works_style.css
@@ -4,17 +4,24 @@
 }
 header{
     position: relative;
-    width: 1535px;
+    width: 100%;
     height: 60px;
     left: 0px;
     top: 0px;
     background: #D9D9D9;
 }
+header .contact img{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 3%;
+    top: 5px;
+}
 header .resume{
     position: absolute;
     width: 184px;
     height: 30px;
-    left: 1300px;
+    right: 7%;
     top: 10px;
     font-family: 'Inter';
     font-style: normal;
@@ -124,7 +131,7 @@ header .main-body4{
 }
 footer{
     position: absolute;
-    width: 1535px;
+    width: 100%;
     height: 30px;
     left: 0px;
     bottom: 0px;
@@ -173,7 +180,7 @@ div.item {
     position: absolute;
     width: auto;
     height: auto;
-    background-color: #30B8E2;
+    background-color: none;
     --r: calc(var(--position) - var(--offset));
     --abs: max(calc(var(--r) * -1), var(--r));
     transition: all 0.25s linear;
