--- a/static/style.css
+++ b/static/style.css
@@ -3,123 +3,80 @@
     padding: 0;
 }
 header{
-    position: absolute;
-    width: 100%;
     height: 60px;
-    left: 0px;
-    top: 0px;
     background: #D9D9D9;
+    min-width: 1430px;
+    width: 100%;
+}
+#first {
+    display: flex;
+    justify-content: flex-end;
 }
 header .contact img{
-    position: absolute;
+    margin-right: 40px;
+    margin-top: 5px;
     width: 50px;
     height: 50px;
-    right: 3%;
-    top: 5px;
 }
 header .resume{
-    position: absolute;
+    margin: 0.7%;
     width: 184px;
     height: 30px;
-    right: 7%;
-    top: 10px;
-    font-family: 'Inter';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 30px;
     text-decoration-line: underline;
     color: #000000;
     cursor: pointer;
     -webkit-transition: all 0.5s ease;
-        transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 header .resume a:hover{
     color: #f8f8f9;
 }
-main .main-body1{
-    position: absolute;
-    width: 114px;
-    height: 242px;
-    left: 620px;
-    top: 135px;
-    font-family: 'Inter';
+.main-body{
+    display: flex;
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 170px;
-    line-height: 242px;
-    /* identical to box height */
-    text-align: center;
+    margin-top: 90px;
+    margin-left: 600px;
+}
+.l{
     color: #1E90FF;
 }
-main .main-body2{
-    position: absolute;
-    width: 53px;
-    height: 242px;
-    left: 725px;
-    top: 134px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 170px;
-    line-height: 242px;
-    /* identical to box height */
-    text-align: center;
+.i{
     color: #F41212;
 }
-main .main-body3{
-    position: absolute;
-    width: 113px;
-    height: 242px;
-    left: 760px;
-    top: 134px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 170px;
-    line-height: 242px;
-    /* identical to box height */
-    text-align: center;
+.z{
     color: #FFD700;
 }
-main .main-body4{
-    position: absolute;
-    width: 115px;
-    height: 242px;
-    left: 835px;
-    top: 134px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 170px;
-    line-height: 242px;
-    text-align: center;
+.a{
     color: #32CD32;
 }
-main .main-body5{
-    position: absolute;
-    width: 212px;
-    height: 36px;
-    left: 780px;
-    top: 310px;
-    font-family: 'Inter';
+.main-body5{
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 25px;
-    line-height: 36px;
-    text-align: center;
     color: #30B8E2;
+    margin-top: 157px;
+    margin-left: -120px;
 }
 .wrapper {
     display: flex;
     position: absolute;
-    left: 438px;
+    left: 440px;
     top: 356px;
 }
 .text {
     width: 28ch;
     color: #000000;
     font-family: monospace;
+    font-weight: 200;
     font-size: 20px;
     white-space: nowrap; /* не переносить текст на другую строку */
     overflow: hidden; /* скрываем переполнение контентом */
@@ -143,7 +100,7 @@ main .main-body5{
     }
 }
 main .box{
-    position: relative;
+    position: absolute;
     width: 700px;
     height: 30px;
     left: 430px;
@@ -171,7 +128,7 @@ footer .made-by{
     height: 10px;
     left: 31px;
     bottom: 15px;
-    font-family: 'Inter';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 15px;
