--- a/static/works_style.css
+++ b/static/works_style.css
@@ -3,131 +3,99 @@
     padding: 0;
 }
 header{
-    position: relative;
-    width: 100%;
     height: 60px;
-    left: 0px;
-    top: 0px;
     background: #D9D9D9;
+    min-width: 1430px;
+    width: 100%;
 }
-header .contact img{
-    position: absolute;
+.contact img{
     width: 50px;
     height: 50px;
-    right: 3%;
-    top: 5px;
+    margin-right: 5px;
 }
-header .resume{
-    position: absolute;
+.resume{
+    margin-top: 10px;
     width: 184px;
     height: 30px;
-    right: 7%;
-    top: 10px;
-    font-family: 'Inter';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 30px;
     text-decoration-line: underline;
     color: #000000;
     cursor: pointer;
     -webkit-transition: all 0.5s ease;
-        transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 header .resume a:hover{
     color: #f8f8f9;
 }
-header .search-box{
-    position: absolute;
+#first {
+    display: flex;
+    justify-content: flex-start;
+}
+#second {
+    display: flex;
+    justify-content: flex-start;
+}
+.search-box{
     width: 500px;
     height: 30px;
-    left: 150px;
-    top: 15px;
     background: #FFFFFF;
+    margin-top: 17px;
+    margin-left: 30px;
 }
-header .box{
-    position: absolute;
+.box{
     width: 30px;
     height: 30px;
-    left: 620px;
-    top: 15px;
     background: #30B8E2;
+    margin-top: 17px;
+    margin-left: 280px;
 }
-header .search img{
-    position: absolute;
+.search img{
     width: 20px;
     height: 20px;
-    left: 625px;
-    top: 20px;
+    margin-top: 22px;
+    margin-left: -25px;
 }
-header .text-search{
-    position: absolute;
-    width: 450px;
+.text-search{
+    width: 184px;
     height: 30px;
-    left: 160px;
-    top: 15px;
-    font-family: 'Inter';
+    margin-top: 20px;
+    margin-left: -490px;
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 200;
     font-size: 20px;
-    line-height: 30px;
     color: #000000;
 }
-header .main-body1{
-    position: absolute;
-    width: 65px;
-    height: 65px;
-    left: 8px;
-    top: 0px;
-    font-family: 'Inter';
+.header-body{
+    display: flex;
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 100;
     font-size: 50px;
-    line-height: 51px;
-    text-align: center;
+    margin-top: 0px;
+    margin-left: 30px;
+}
+.l{
     color: #1E90FF;
 }
-header .main-body2{
-    position: absolute;
-    width: 65px;
-    height: 65px;
-    left: 30px;
-    top: 0px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 100;
-    font-size: 50px;
-    line-height: 51px;
-    text-align: center;
+.i{
     color: #F41212;
 }
-header .main-body3{
-    position: absolute;
-    width: 65px;
-    height: 65px;
-    left: 50px;
-    top: 0px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 100;
-    font-size: 50px;
-    line-height: 51px;
-    text-align: center;
+.z{
     color: #FFD700;
 }
-header .main-body4{
-    position: absolute;
-    width: 65px;
-    height: 55px;
-    left: 73px;
-    top: 0px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 100;
-    font-size: 50px;
-    line-height: 51px;
-    text-align: center;
+.a{
     color: #32CD32;
+}
+.h_c{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: -53px;
+    margin-right: 20px;
 }
 footer{
     position: absolute;
@@ -143,7 +111,7 @@ footer .made-by{
     height: 10px;
     left: 31px;
     bottom: 15px;
-    font-family: 'Inter';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 15px;
