--- a/static/resume_style.css
+++ b/static/resume_style.css
@@ -8,10 +8,7 @@ header{
     min-width: 1430px;
     width: 100%;
 }
-.contact img{
-    width: 50px;
-    height: 50px;
-}
+
 #first {
     display: flex;
     justify-content: flex-start;
@@ -249,7 +246,7 @@ footer .made-by{
     font-weight: 300;
     font-size: 15px;
     line-height: 24px;
-    color: #000000;
+    color: #00000074;
 }
 #third {
     display: flex;
