--- a/static/works_style.css
+++ b/static/works_style.css
@@ -8,14 +8,10 @@ header{
     min-width: 1430px;
     width: 100%;
 }
-.contact img{
-    width: 50px;
-    height: 50px;
-    margin-right: 5px;
-}
+
 .resume{
     margin-top: 10px;
-    width: 184px;
+    margin-right: 15px;
     height: 30px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
@@ -23,13 +19,12 @@ header{
     font-size: 20px;
     line-height: 30px;
     text-decoration-line: underline;
-    color: #000000;
+    color: white;
+    text-decoration: none;
     cursor: pointer;
-    -webkit-transition: all 0.5s ease;
-    transition: all 0.5s ease;
 }
-header .resume a:hover{
-    color: #f8f8f9;
+.resume:hover{
+    color: rgb(3, 3, 3);
 }
 #first {
     display: flex;
@@ -116,7 +111,7 @@ footer .made-by{
     font-weight: 300;
     font-size: 15px;
     line-height: 24px;
-    color: #000000;
+    color: #00000074;
 }
 .main_body{
     height: 600px;
