--- a/static/style.css
+++ b/static/style.css
@@ -6,26 +6,39 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    flex-flow: column;
+}
+@media all and (max-width: 800px) {
+    main {
+        justify-content: center;
+        flex-shrink: 15;
+    }
 }
 .head-up{
-    height: 60px;
+    height: 8vh;
     background: #D9D9D9;
     width: 100%;
     display: flex;
     line-height: 1.35;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 2.8vh;
+    flex-flow: row wrap;
+    justify-content: flex-start;
 }
-
+@media all and (max-width: 800px) {
+    .head-up {
+        justify-content: center;
+    }
+}
 ul {
     display: inline-grid;
     grid-auto-flow: row;
     grid-gap: 30px;
     justify-items: flex-start;
     margin: auto;
-    margin-top: 15px;
-    margin-left: 20px;
+    margin-top: 2vh;
+    margin-left: 3vh;
     cursor: pointer;
 }
 @media (min-width: 500px) {
@@ -109,8 +122,7 @@ main{
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 170px;
-
+    font-size: 23vh;
 }
 .l{
     color: #1E90FF;
@@ -128,26 +140,26 @@ main{
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 3.5vh;
     color: #30B8E2;
-    margin-top: 157px;
-    margin-left: -120px;
+    margin-top: 21.4vh;
+    margin-left: -18vh;
 }
 .wrapper {
-    margin-top: 20px;
+    margin-top: 2vh;
     justify-content: center;
 }
 .text {
-    margin-left: 15px;
-    margin-top: 2px;
-    width: 28ch;
+    margin-left: 1vh;
+    margin-top: 0.2vh;
+    width: 41.5vh;
     color: #000000;
     font-family: monospace;
     font-weight: 200;
-    font-size: 20px;
+    font-size: 2.7vh;
     white-space: nowrap; /* не переносить текст на другую строку */
     overflow: hidden; /* скрываем переполнение контентом */
-    border-right: 2px solid #000000; /* рисуем курсор */
+    border-right: 1.5px solid #000000; /* рисуем курсор */
     animation: cursor 0.75s step-end infinite, printed_text 5s steps(28);
 }
 
@@ -169,20 +181,20 @@ main{
 }
 
 .for-text{
-    width: 650px;
+    width: 83vh;
 }
 .box{
     display: flex;
     flex-direction: row;
-    border: 4px solid #30B8E2;
-    width: 700px;
-    height: 30px;
+    border: 3px solid #30B8E2;
+    width: 90vh;
+    height: 4vh;
 }
 .search img{
-    margin-top: 2.5px;
-    margin-left: 15px;
-    width: 25px;
-    height: 25px;
+    margin-top: 0.2vh;
+    margin-left: 2.5vh;
+    width: 3.5vh;
+    height: 3.5vh;
 }
 footer{
     flex: 0 0 auto;
@@ -191,14 +203,14 @@ footer{
     width: 100%;
     display: flex;
     background-color: #D9D9D9;
-    height: 30px;
+    height: 4vh;
 }
 .made-by{
-    margin-top: 7px;
-    margin-left: 10px;
+    margin-top: 0.9vh;
+    margin-left: 2vh;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 15px;
+    font-size: 2vh;
     color: #00000074;
 }
