--- a/static/resume_style.css
+++ b/static/resume_style.css
@@ -2,152 +2,323 @@
     margin: 0;
     padding: 0;
 }
-header{
-    height: 60px;
-    background: #D9D9D9;
-    min-width: 1430px;
-    width: 100%;
+
+.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    flex-flow: column;
+    overflow: hidden;
+    min-height: 100vh;
 }
 
-#first {
-    display: flex;
-    justify-content: flex-start;
-}
-#second {
-    display: flex;
-    justify-content: flex-start;
-}
-.search-box{
-    width: 500px;
-    height: 30px;
-    background: #FFFFFF;
-    margin-top: 17px;
-    margin-left: 30px;
-}
-.box{
-    width: 30px;
-    height: 30px;
-    background: #30B8E2;
-    margin-top: 17px;
-    margin-left: 280px;
-}
-.search img{
-    width: 20px;
-    height: 20px;
-    margin-top: 22px;
-    margin-left: -25px;
-}
-.text-search{
-    width: 184px;
-    height: 30px;
-    margin-top: 20px;
-    margin-left: -490px;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 200;
-    font-size: 20px;
-    color: #000000;
-}
 .header-body{
+    height: 8vh;
+    background: #30B8E2;
+    width: 100%;
     display: flex;
+    line-height: 1.35;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    font-size: 2.8vh;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+}
+@media all and (max-width: 800px) {
+    .head-up {
+        justify-content: center;
+    }
+}
+
+ul {
+    display: inline-grid;
+    grid-auto-flow: row;
+    grid-gap: 30px;
+    justify-items: flex-start;
+    margin: auto;
+    margin-left: 3vh;
+    cursor: pointer;
+}
+@media (min-width: 500px) {
+    ul {
+        grid-auto-flow: column;
+    }
+}
+
+.search{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+}
+
+.search-box{
+    width: 30vw;
+    height: 4vh;
+    background: #d1ebf3;
+    border-radius: 3vh;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.151);
+    margin-top: 1vh;
+    margin-left: 0.5vw;
+    display: flex;
+    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.search img{
+    margin-top: 1.9vh;
+    margin-left: -26.6vw;
+    width: 2vh;
+    height: 2vh;
+}
+
+.text {
+    margin-left: -29vw;
+    margin-top: 1.5vh;
+    width: 7.3vw;
+    color: #000000;
+    font-family: monospace;
+    font-weight: 200;
+    font-size: 2vh;
+    white-space: nowrap; /* не переносить текст на другую строку */
+    overflow: hidden; /* скрываем переполнение контентом */
+    border-right: 0.1vh solid #000000; /* рисуем курсор */
+    animation: cursor 0.75s step-end infinite, printed_text 5s steps(13);
+}
+
+@keyframes cursor {
+    0% {
+        border-color: #000000;
+    }
+    50% {
+        border-color: transparent;
+    }
+    100% {
+        border-color: #000000;
+    }
+}
+@keyframes printed_text {
+    from {
+        width: 0;
+    }
+}
+
+.for-text{
+    width: 25vw;
+}
+
+.logo{
+    margin-left: 0.5vw;
+}
+
+.liza{
+    color: #FFFFFF;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
-    font-weight: 100;
-    font-size: 50px;
-    margin-top: 0px;
-    margin-left: 30px;
+    font-weight: 500;
+    font-size: 4vh;
 }
-.l{
-    color: #1E90FF;
-}
-.i{
-    color: #F41212;
-}
-.z{
-    color: #FFD700;
-}
-.a{
-    color: #32CD32;
-}
-.h_c{
+
+.main-body{
     display: flex;
-    justify-content: flex-end;
-    margin-top: -53px;
-    margin-right: 20px;
+    flex-flow: column;
+    justify-content: center;
 }
-main .text_main{
-    position: absolute;
-    width: 515px;
-    height: 360px;
-    left: 120px;
-    top: 100px;
+
+.info{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
 }
-main .text_main1{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 28px;
-    line-height: 35px;
-    color: #30B8E2;
+
+.right{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    margin-top: 5vh;
+    margin-right: 25vw;
+    padding-bottom: 20vh;
 }
-main .text_main2{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 100;
-    font-size: 20px;
-    line-height: 26px;
+
+.about{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    max-width: 15vw;
+    font-family: 'Poppins', sans-serif;
+}
+
+.first{
+    list-style-type: none;
+    font-weight: 500;
+    font-size: 2.2vh;
     color: #000000;
 }
-main .text_contact{
+
+.else{
+    list-style-type: none;
+    font-weight: 500;
+    font-size: 1.5vh;
+    color: #000000;
+    margin-top: -1vh;
+}
+
+.left{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    margin-left: 8vw;
+    margin-top: -30vh;
+}
+
+.name{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    margin-top: 5vh;
+    margin-left: 8vw;
+}
+
+.photo img{
+    width: 5vh;
+    height: 5.5vh;
+    border-radius: 1vh;
+}
+
+.fio{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+    list-style-type: none;
+}
+
+.one{
+    font-weight: 500;
+    font-size: 2.5vh;
+    color: #000000;
+}
+
+.two{
+    font-weight: 300;
+    font-size: 1.7vh;
+    color: #00000083;
+    margin-top: -2.5vh;
+}
+
+.line1{
+    padding: 0;
+	height: 0;
+	border: none;
+	border-top: 0.1vh solid #33333348;
+    margin-top: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+
+.line2{
+    border-left: 0.1vh solid #33333348;
+    height: 60vh;
+    padding: 0;
+    margin-top: 2vh;
+}
+
+.line3{
+    padding: 0;
+	height: 0;
+	border: none;
+	border-top: 0.1vh solid #33333348;
+    list-style-type: none;
+    margin-left: -5vw;
+    margin-right: -27vw;
+}
+
+.view{
+    display: flex;
+    flex-flow: row;
+    justify-content: flex-start;
+    margin-left: 8vw;
+    margin-top: 2vh;
+}
+
+.collage img{
+    width: 20vw;
+    height: 38vh;
+}
+
+.front img{
+    width: 20vw;
+    height: 38vh;
+    border-radius: 1.5vh;
+    margin-left: 1vw;
+}
+
+.text_main{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 3vh;
+}
+
+.text_main1{
+    font-weight: 300;
+    font-size: 2.2vh;
+    color: #30B8E2;
+    margin-top: 0.5vh;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+.text_main1:hover {
+    color: #53d7ff;
+}
+
+.text_main2{
+    font-weight: 300;
+    font-size: 1.8vh;
+    color: #000000;
+    margin-top: 0.5vh;
+}
+
+.text_contact{
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
-    position: absolute;
-    width: 530px;
-    height: 200px;
-    left: 120px;
-    top: 380px;
-    border: 1px solid rgba(0, 0, 0, 0.33);
+    width: 37vw;
+    height: 15vh;
+    margin-top: 5vh;
+    border: 0.1vh solid rgba(0, 0, 0, 0.33);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-main .text_contact1{
-    position: absolute;
-    width: 408px;
-    height: 107px;
-    left: 135px;
-    top: 385px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 50px;
+.text_contact1{
+    font-weight: 500;
+    font-size: 3vh;
     color: #000000;
+    margin-top: 1.5vh;
+    margin-left: 2vh;
 }
-main .text_contact2{
-    position: absolute;
-    width: 408px;
-    height: 100px;
-    left: 135px;
-    top: 425px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 200;
-    font-size: 20px;
-    line-height: 30px;
-    color: rgba(0, 0, 0, 0.7);
+.text_contact2{
+    font-weight: 400;
+    font-size: 2vh;
+    color: #000000a6;
+    margin-top: 0.5vh;
+    margin-left: 2vh;
 }
 .custom-btn {
-    left: 135px;
-    top: 440px;
-    width: 130px;
-    height: 40px;
+    margin-top: 1vh;
+    margin-left: 2vh;
+    width: 5vw;
+    height: 4vh;
     color: #fff;
-    border-radius: 5px;
-    padding: 10px 25px;
-    font-family: 'Lato', sans-serif;
+    border-radius: 0.5vh;
+    font-family: 'Poppins', sans-serif;
     font-weight: 500;
+    font-size: 1.6vh;
     background: transparent;
     cursor: pointer;
     transition: all 0.3s ease;
-    position: relative;
     display: inline-block;
     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
     7px 7px 20px 0px rgba(0,0,0,.1),
@@ -162,22 +333,16 @@ main .text_contact2{
     border: none;
 }
 .btn-1 span {
-    position: relative;
     display: block;
     width: 100%;
     height: 100%;
 }
 .btn-1:before,
 .btn-1:after {
-    position: absolute;
     content: "";
     right: 0;
     bottom: 0;
     background: rgba(48, 184, 226, 1);
-    /*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-                -4px -4px 6px 0 rgba(116, 125, 136, .2), 
-    inset -4px -4px 6px 0 rgba(255,255,255,.5),
-    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
     transition: all 0.3s ease;
 }
 .btn-1:before{
@@ -202,7 +367,6 @@ main .text_contact2{
 }
 .btn-1 span:before,
 .btn-1 span:after {
-    position: absolute;
     content: "";
     left: 0;
     top: 0;
@@ -227,32 +391,7 @@ main .text_contact2{
 .btn-1 span:hover:after {
     width: 100%;
 }
-footer{
-    position: absolute;
-    width: 100%;
-    height: 30px;
-    left: 0px;
-    bottom: 0px;
-    background: #D9D9D9;
-}
-footer .made-by{
-    position: absolute;
-    width: 302px;
-    height: 10px;
-    left: 31px;
-    bottom: 15px;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 24px;
-    color: #00000074;
-}
-#third {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-}
+
 .main_box{
     box-sizing: border-box;
     width: 32%;
@@ -269,64 +408,46 @@ footer .made-by{
     margin-left: 807.5px;
     margin-top: -593.5px;
 }
-.text_inf{
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    width: 31%;
-    height: auto;
-    margin-left: 807.5px;
-    margin-top: -290px;
-}
-.text_inf1{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 25px;
-    color: #000000;
-}
-.text_inf2{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    color: rgba(0, 0, 0, 0.6);
-}
-.text-inf3{
-    margin-top: 25px;
-}
-.text_inf3{
-    margin-top: 5px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    color: #000000;
-}
-.line{
-    margin-left: 800px;
-    margin-top: -158px;
-    width: 31.89%;
-    height: 0px;
-    border: 1px solid #30B8E2;
-}
+
 .sn{
     display: flex;
     flex-direction: row;
-    margin-top: 166px;
-    margin-left: 810px;
+    justify-content: space-between;
+    margin-left: 1.5vw;
+    margin-right: 11vw;
+    margin-top: 1.5vh;
 }
 .vk img{ 
-    width: 40px;
-    height: 40px;
+    width: 4vh;
+    height: 4vh;
+    margin-right: 0.5vw;
 }
 .tg img{
-    width: 40px;
-    height: 40px;
-    margin-left: 10px;
+    width: 4vh;
+    height: 4vh;
+    margin-right: 0.5vw;
 }
 .git img{
-    width: 40px;
-    height: 40px;
-    margin-left: 10px;
+    width: 4vh;
+    height: 4vh;
+    margin-right: 0.5vw;
+}
+
+footer{
+    margin-top: auto;
+}
+.feet {
+    width: 100%;
+    display: flex;
+    background-color: #30B8E2;
+    height: 4vh;
+}
+.made-by{
+    margin-top: 0.9vh;
+    margin-left: 2vh;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 2vh;
+    color: #00000074;
 }
